--- a/src/main/resources/templates/categoryForm.html
+++ b/src/main/resources/templates/categoryForm.html
@@ -8,6 +8,7 @@
 <form th:object="${category}" method="post">
   <p>Category name: <input type="text" th:field="*{categoryName}" /></p>
   <p th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">name Error</p>
+  <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
   <p><input type="submit" value="Submit" /></p>
 </form>
 </body>
