--- a/src/main/resources/templates/definitionForm.html
+++ b/src/main/resources/templates/definitionForm.html
@@ -16,6 +16,7 @@
     <p th:if="${#fields.hasErrors('definitionValue')}" th:errors="*{definitionValue}">name Error</p>
     <p>Examples: <input type="text" th:field="*{examples}" /></p>
     <p th:if="${#fields.hasErrors('examples')}" th:errors="*{examples}">name Error</p>
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
   </form>
 
